# macromol_gym

./: .coveragerc  .ruff.toml  README.md  README.rst  pyproject.toml
.github/workflows/: test.yml
docs/: Makefile  basic_usage.rst  conf.py
macromol_training/: __init__.py  database_io.py  dataset.py  density.py  init.py  interpro.py  pick.py  pymol.py  split.py
make_db/: .bumpversion.toml  pyproject.toml
make_db/macromol_gym/: __init__.py  cath.py  database_io.py  geometry.py  pick.py  pymol.py  split.py
make_db/tests/: test_cath.nt  test_cath.py  test_database_io.py  test_density.py  test_geometry.py  test_pick.nt  test_pick.py  test_split.py
pretrain/: .bumpversion.toml  pyproject.toml  test_install.sh
pretrain/macromol_gym_pretrain/: __init__.py  dataset.py  geometry.py  images.py  pymol.py  random.py  utils.py
pretrain/macromol_gym_pretrain/lightning/: data.py  models.py
pretrain/macromol_gym_pretrain/torch/: __init__.py  curriculum.py  data.py  infinite_sampler.py
pretrain/tests/: make_db.py  param_helpers.py  test_dataset.nt  test_dataset.py  test_torch_data.nt  test_torch_data.py
tests/: test_database_io.py  test_dataset.nt  test_dataset.py  test_density.nt  test_density.py  test_geometry.py  test_pick.nt  test_pick.py  test_split.nt  test_split.py
tests/pdb/: 1qjg_clean.cif  1qjg_mnt.cif
unsupervised/: .bumpversion.toml
unsupervised/macromol_gym_unsupervised/: __init__.py  database_io.py  pymol.py  samples.py  utils.py
unsupervised/macromol_gym_unsupervised/lightning/: data.py
unsupervised/macromol_gym_unsupervised/torch/: __init__.py  batch_rng.py  data.py  infinite_sampler.py
unsupervised/tests/: make_db.py  param_helpers.py  test_images.nt  test_torch_batch_rng.py  test_torch_infinite_sampler.nt
