[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "macromol_training"
authors = [
  {name = "Kale Kundert", email = "kale@thekunderts.net"},
]
readme = 'README.rst'
dynamic = ["version", "description"]
requires-python = "~=3.12"
classifiers = [
  'Programming Language :: Python :: 3',
]
dependencies = [
  'aiohttp',
  'docopt',
  'icosphere',
  'macromol_census',
  'macromol_dataframe',
  'more_itertools',
  'nestedtext',
  'networkx',
  'numpy',
  'periodictable',
  'pipeline_func',
  'scipy',
  'scikit-learn',
  'tqdm',
]

[project.optional-dependencies]
test = [
  'pytest',
  'parametrize_from_file',
  'pytest_unordered',
]
doc = [
  'sphinx',
  'sphinx_rtd_theme',
  'autoclasstoc',
]

[project.scripts]
mmt_init = 'macromol_training.init:main'
mmt_pick_training_examples = 'macromol_training.pick:main'
mmt_fetch_interpro_clusters = 'macromol_training.interpro:main'
mmt_split_training_examples = 'macromol_training.split:main'

[project.urls]
'Documentation' = 'https://macromol-training.readthedocs.io/en/latest/'
'Version Control' = 'https://github.com/kalekundert/macromol_training'
'Bug Tracker' = 'https://github.com/kalekundert/macromol_training/issues'
'Continuous Integration' = 'https://github.com/kalekundert/macromol_training/actions'
'Test Coverage' = 'https://coveralls.io/github/kalekundert/macromol_training'

[tool.ruff.lint]
select = ["F"]
ignore = ["F405", "F403"]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]

[tool.pytest.ini_options]
addopts = "--doctest-modules --doctest-glob='*.rst'"
doctest_optionflags = 'NORMALIZE_WHITESPACE'

[tool.coverage.run]
branch = true
parallel = true
source = ['macromol_training']

[tool.coverage.report]
exclude_lines = [
    "^\\s*raise AssertionError\\b",
    "^\\s*raise NotImplementedError\\b",
]

[tool.semantic_release]
version_variables = ['macromol_dataframe/__init__.py:__version__']
build_command = 'python -m pip install build && python -m build'
major_on_zero = false
